fix tap flashing on mobile chrome

--- a/reader/mini.css
+++ b/reader/mini.css
@@ -30,6 +30,7 @@ body {
     text-align: left;
     display: flex;
     justify-content: center;
+    -webkit-tap-highlight-color: transparent
 }
 
 /* Navigation */
